tests/lean/let1.lean.expected.out
let bool : Type := Prop,
    and : bool → bool → Prop := λ p q, Π c, (p → q → c) → c,
    and_intro : Π p q, p → q → and p q := λ p q H1 H2 c H, H H1 H2,
    and_elim_left : Π p q, and p q → p := λ p q H, H p (λ H1 H2, H1),
    and_elim_right : Π p q, and p q → q := λ p q H, H q (λ H1 H2, H2)
in and_intro :
  ∀ p q, p → q → ∀ c, (p → q → c) → c
let1.lean:20:19: error: invalid let-expression, expression
  λ p q H1 H2 c H, H H1 H2
has type
  Π p q, p → q → Π c, (p → q → c) → c
but is expected to have type
  Π p q, p → q → and q p
